validator says i have bug. bug now squashed

--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ p {
 h1 {
   font-size: 30px;
   font-family: "EB Garamond", serif;
-  font-weight: 700, bold;
+  font-weight: 700;
   margin: 0 0 0.5rem 0;
   padding: 0;
 }
@@ -76,7 +76,7 @@ h2 {
 }
 
 .colophon {
-  margin: 1rem, 0;
+  margin: 1rem 0;
   font-size: 15px; 
   font-family: "Source Code Pro", monospace;
   text-align: center; 
